--- a/public/server/assets/index.css
+++ b/public/server/assets/index.css
@@ -8,9 +8,9 @@ body {
     flex-wrap: wrap;
 }
 .option-item {
-    min-width: 380px;
-    width: 380px;
-    height: 40px;
+    min-width: 760px;
+    width: 760px;
+    height: 80px;
     background-color: #7fddff;
     box-shadow: 2px 2px 2px #aaa;
     box-sizing: border-box;
@@ -20,23 +20,40 @@ body {
     align-items: center;
     display: flex;
 }
-.option-item-index {
-    padding-left: 10px;
-    padding-right: 10px;
-    height: 40px;
-    width: 20px;
-    line-height: 40px;
+.option-item-index, .option-item-result {
+    height: 80px;
+    width: 120px;
+    line-height: 80px;
     text-align: center;
-    font-size: 20px;
+    font-size: 40px;
     color: black;
     font-weight: bold;
     background-color: #206e8b;
     color: white;
 }
+.option-item-result {
+    font-size: 25px;
+    animation-duration: 1s;
+    animation-name: slidein;
+}
+.option-item-index span, .option-item-result span {
+    width: 100%;
+    display: inline-block;
+}
+@keyframes slidein {
+    from {
+        transform: rotate3d(0deg)
+    }
+
+    to {
+        transform: rotateY(360deg) 
+    }
+}
 .option-item-content {
     width: 100%;
-    height: 40px;
-    line-height: 40px;
+    height: 80px;
+    line-height: 80px;
+    font-size: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
