--- a/src/components/Index.css
+++ b/src/components/Index.css
@@ -6,3 +6,12 @@ body {
 .index-cards {
     margin: 5px auto;
 }
+.lang-ja {
+    font-family: Arial, Helvetica, 'Yu Gothic UI', 'Meiryo', sans-serif;
+}
+.lang-zh {
+    font-family: Arial, Helvetica, 'Noto Sans CJk SC', sans-serif;
+}
+.lang-en {
+    font-family: Arial, Helvetica, sans-serif;
+}
