--- a/public/server/assets/index.css
+++ b/public/server/assets/index.css
@@ -66,7 +66,7 @@ body {
     font-family: Arial, Helvetica, 'Yu Gothic UI', 'Meiryo', sans-serif;
 }
 .lang-zh {
-    font-family: Arial, Helvetica, 'Noto Sans CJk SC', sans-serif;
+    font-family: Arial, Helvetica, 'Noto Sans CJk SC', 'Microsoft Yahei', sans-serif;
 }
 .lang-en {
     font-family: Arial, Helvetica, sans-serif;
